add a new project
mybatis项目没有的删除功能出问题了，后面修复
添加了秒杀商品项目，这是一个SSM+maven的整合学习项目

--- a/MicroMessage/.settings/org.eclipse.core.resources.prefs
+++ b/MicroMessage/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//WebContent/resources/js/common/jquery.jscrollpane.min.js=UTF-8
 encoding//WebContent/resources/js/common/jquery.mousewheel.js=UTF-8
 encoding//WebContent/resources/js/common/scroll-startstop.events.jquery.js=UTF-8
 encoding//src/com/imooc/dao/CommandDao.java=UTF-8
+encoding//src/com/imooc/entity/Page.java=UTF-8
 encoding//src/com/imooc/servlet/AutoReplyServlet.java=UTF-8
 encoding//src/com/imooc/util/CommonUtil.java=UTF-8
 encoding//src/com/imooc/util/Iconst.java=UTF-8
