--- a/seckill/.classpath
+++ b/seckill/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/xulei/Downloads/common-annotations-1.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
