--- a/seckill/pom.xml
+++ b/seckill/pom.xml
@@ -9,18 +9,15 @@
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
-			<!-- 使用junit4,junit4使用注解方式 ，用于写单元测试-->
+			<!-- 使用junit4,junit4使用注解方式 ，用于写单元测试 -->
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- 补全项目依赖 -->
-		<!-- 1、日志  Java日志：slf4j,log4j,logback,common-logging
-			slf4j:是规范/接口
-			日志实现:log4j,logback,common-logging
-			使用:slf4j + logback
-		-->
+		<!-- 1、日志 Java日志：slf4j,log4j,logback,common-logging slf4j:是规范/接口 日志实现:log4j,logback,common-logging 
+			使用:slf4j + logback -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -41,15 +38,15 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.37</version>
+			<version>5.1.38</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.11</version>
 		</dependency>
-		
+
 		<!-- DAO框架:mybatis依赖 -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -60,9 +57,9 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>1.2.3</version>
+			<version>1.3.1</version>
 		</dependency>
-		
+
 		<!-- 3、servlet web 相关依赖 -->
 		<dependency>
 			<groupId>taglibs</groupId>
@@ -84,7 +81,7 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-		
+
 		<!-- 4、Spring依赖 -->
 		<!-- 4.1 Spring核心依赖 -->
 		<dependency>
@@ -102,7 +99,7 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.3.8.RELEASE</version>
 		</dependency>
-		<!-- 4.2 Spring  DAO层依赖 -->
+		<!-- 4.2 Spring DAO层依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -130,6 +127,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>4.3.8.RELEASE</version>
+		</dependency>
+		<!-- @Resource注解相关jar包 -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3</version>
 		</dependency>
 	</dependencies>
 	<build>
